--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header__container">
     <a class="header__branding" href="/">
-      <img src="/assets/images/logo.svg" alt="" class="header__logo">
+      <img src="{{ '/assets/images/logo.svg' | relative_url }}" alt="" class="header__logo">
       <span class="header__title">{{ site.title }}</span>
     </a>
     <button class="header__checkout snipcart-checkout">
