--- a/_includes/product.html
+++ b/_includes/product.html
@@ -5,5 +5,5 @@
     <p class="product__description">{{ product.content | remove: '<p>' | remove: '</p>' }}</p>
     {% include product-definition.html %}
   </div>
-  <img src="{{ product.image }}" alt="{{ product.name }} product image" class="product__image">
+  <img src="{{ product.image | relative_url }}" alt="{{ product.name }} product image" class="product__image">
 </div>
