--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__container">
-    <a class="header__branding" href="/">
+    <a class="header__branding" href="{{ '/' | relative_url }}">
       <img src="{{ '/assets/images/logo.svg' | relative_url }}" alt="" class="header__logo">
       <span class="header__title">{{ site.title }}</span>
     </a>
