--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,5 +11,7 @@
   {% include footer.html %}
 </body>
 <div hidden id="snipcart" data-api-key="YzA2MGMyMDQtOGEyZC00MTRhLTljMDYtNGQ1ZGFiZTYxNmZhNjM2OTkzNDY1MTE1NDYxMzgz"></div>
-<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
+<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="YzA2MGMyMDQtOGEyZC00MTRhLTljMDYtNGQ1ZGFiZTYxNmZhNjM2OTkzNDY1MTE1NDYxMzgz"></script>
+
+
 </html>
