--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,7 @@
   </main>
   {% include footer.html %}
 </body>
-<div hidden id="snipcart" data-api-key="YzA2MGMyMDQtOGEyZC00MTRhLTljMDYtNGQ1ZGFiZTYxNmZhNjM2OTkzNDY1MTE1NDYxMzgz"></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="YzA2MGMyMDQtOGEyZC00MTRhLTljMDYtNGQ1ZGFiZTYxNmZhNjM2OTkzNDY1MTE1NDYxMzgz"></script>
-
 
 </html>
