--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
   </main>
   {% include footer.html %}
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-<script src="https://cdn.snipcart.com/scripts/2.0/snipcart.js" id="snipcart" data-api-key="YzA2MGMyMDQtOGEyZC00MTRhLTljMDYtNGQ1ZGFiZTYxNmZhNjM2OTkzNDY1MTE1NDYxMzgz"></script>
+
+<div hidden id="snipcart" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4"></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
+
 
 </html>
