--- a/assets/main.scss
+++ b/assets/main.scss
@@ -273,11 +273,18 @@ body {
     margin-top: 0;
     margin-bottom: 0;
   }
+  ul.cols2 {
+    column-count: 2;
+		column-gap: 100px;
+	}
   ul.cols3 {
     column-count: 3;
+  }
+  ul.cols {
 		column-width: 200px;
 		list-style: none;
 		padding: 0;
+		margin: 100px 0;
 		li {
 			display: inline-block;
 		}
@@ -290,3 +297,28 @@ body {
 		margin: 20px auto;
 	}
 }
+
+blockquote {
+	font-weight: 100;
+	font-size: 2rem;
+	max-width: 600px;
+	line-height: 1.4;
+	position: relative;
+	margin: 0;
+	padding: .5rem;
+}
+
+blockquote:before {
+	position: absolute;
+	color: $color--primary;
+	font-size: 8rem;
+	width: 4rem;
+	height: 4rem;
+}
+
+blockquote:before {
+	content: '“';
+	left: -2.5rem;
+	top: -2rem;
+}
+
