--- a/assets/main.scss
+++ b/assets/main.scss
@@ -191,10 +191,10 @@ body {
     max-width: 500px;
     max-height: 400px;
     background-size: cover;
-    transform: perspective(650px) rotateZ(-5deg) rotateX(2.5deg) rotateY(15deg) scale(0.8) translateX(-30px);
+    //transform: perspective(650px) rotateZ(-5deg) rotateX(2.5deg) rotateY(15deg) scale(0.8) translateX(-30px);
     box-shadow: -30px 30px 50px transparentize(darken($color--primary, 50%), 0.9);
     @include sm {
-      transform: perspective(650px) rotateZ(5deg) rotateX(-2.5deg) rotateY(-15deg) scale(0.8) translateX(-30px);
+      //transform: perspective(650px) rotateZ(5deg) rotateX(-2.5deg) rotateY(-15deg) scale(0.8) translateX(-30px);
       box-shadow: 30px 30px 50px transparentize(darken($color--primary, 50%), 0.9);
       &:last-child {
         display: none;
