--- a/assets/main.scss
+++ b/assets/main.scss
@@ -104,6 +104,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url({{ '/assets/images/logo.svg' | relative_url }});
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    min-width: 150px;
+    min-height: 40px;
   }
 
   &__logo {
