--- a/assets/main.scss
+++ b/assets/main.scss
@@ -31,6 +31,11 @@ body {
   background-color: $color--background;
 }
 
+textarea {
+  display: block;
+  margin: 20px 0;
+}
+
 // Mixins
 @mixin sm {
   @media (max-width: #{$layout--max-width}) {
