fix list margins

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -115,6 +115,7 @@ textarea {
     background-repeat: no-repeat;
     min-width: 250px;
     min-height: 80px;
+    cursor: pointer;
   }
 
   &__logo {
@@ -308,6 +309,9 @@ textarea {
 		background-size: contain;
 		margin: 20px auto;
 	}
+  li:first-of-type .icon {
+    margin-top: 0;
+  }
 }
 
 blockquote {
