--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,12 @@
     </div>
   </main>
   {% include footer.html %}
+
+	<div hidden id="snipcart" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4"></div>
+	<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
+
+	<script src="/js/jquery.min.js"></script>
+	{% include cookie-consent.html %}
+
 </body>
-
-<div hidden id="snipcart" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4"></div>
-<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
-
-
 </html>
