--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,10 +1,11 @@
 <p class="about">
+<span>
 Merci de nous contacter pour toute remarque, idée ou demande concernant nos produits et notre service.
-
+</span>
 <form action="https://formspree.io/email@domain.tld" method="POST">
-    <input placeholder="Votre email" type="email" name="_replyto">
-      <textarea placeholder="Votre message" name="message"></textarea>
-        <input class="buy-button" type="submit" value="Send">
+    <input placeholder="Votre email" type="email" name="_replyto" />
+		<textarea placeholder="Votre message" name="message"></textarea>
+		<input class="buy-button" type="submit" value="Send" />
 </form> 
 </p>
 
