--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   </main>
   {% include footer.html %}
 
-	<div hidden id="snipcart" data-api-key="MzMxN2Y0ODMtOWNhMy00YzUzLWFiNTYtZjMwZTRkZDcxYzM4"></div>
+  <div hidden id="snipcart" data-api-key="{{ site.snipcartApiKey }}"></div>
 	<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
 
 	<script src="/js/jquery.min.js"></script>
