--- a/assets/main.scss
+++ b/assets/main.scss
@@ -248,6 +248,7 @@ textarea {
   padding-left: $size--unit * 3;
   padding-right: $size--unit * 3;
   margin-top: $size--unit * 2;
+  cursor: pointer;
   @include button-hover($color--primary);
 }
 
