--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1,9 +1,9 @@
 <div class="product">
-  <div class="product__information">
+  <a class="product__information" href="{{ product.url | relative_url }}">
     <h2 class="product__title">{{ product.name }}</h2>
     <img src="{{ product.image }}" alt="{{ product.name }} product image" class="product__image">
     <p class="product__description">{{ product.excerpt }}</p>
     {% include product-definition.html %}
-  </div>
+  </a>
   <img src="{{ product.image | relative_url }}" alt="{{ product.name }} product image" class="product__image">
 </div>
