email adress for formspree

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -3,7 +3,7 @@
 	<p>
 	Merci de nous contacter pour toute remarque, idée ou demande concernant nos produits et notre service.
 	</p>
-	<form action="https://formspree.io/email@domain.tld" method="POST">
+	<form action="https://formspree.io/contact@apanagecbd.com" method="POST">
 			<input placeholder="Votre email" required type="email" name="_replyto" />
 			<textarea placeholder="Votre message" name="message"></textarea>
 			<input class="buy-button" type="submit" value="Send" />
