en savoir plus button

--- a/_includes/product.html
+++ b/_includes/product.html
@@ -2,7 +2,11 @@
   <a class="product__information" href="{{ product.url | relative_url }}">
     <h2 class="product__title">{{ product.name }}</h2>
     <img src="{{ product.image }}" alt="{{ product.name }} product image" class="product__image">
-    <p class="product__description">{{ product.excerpt }}</p>
+    <p class="product__description">
+      {{ product.excerpt | strip_html }}
+      <br/>
+      <span class="read-more">En savoir plus...</span>
+    </p>
     {% include product-definition.html %}
   </a>
   <img src="{{ product.image | relative_url }}" alt="{{ product.name }} product image" class="product__image">
