--- a/assets/main.scss
+++ b/assets/main.scss
@@ -285,7 +285,10 @@ margin: auto;
   min-height: 80px;
 }
 
-// About by lexo
+// by lexo
+.read-more {
+  text-decoration: underline;
+}
 .about {
   text-align: center;
   h1, h2 {
