--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -2,7 +2,7 @@
 	<h2>Contactez nous</h2>
 	<p>
 	Merci de nous contacter pour toute remarque, idée ou demande concernant nos produits et notre service.
-	Nous vous répondons sous 24H.
+	Nous vous répondons sous 24H jours ouvrés.
 	</p>
 	<form action="https://formspree.io/contact@apanagecbd.com" method="POST">
 			<input placeholder="Votre email" required type="email" name="_replyto" />
