--- a/_includes/cookie-consent.html
+++ b/_includes/cookie-consent.html
@@ -6,7 +6,7 @@
         #cookie-notice a {position: relative; bottom: 4px;}
     }
 </style>
-<div id="cookie-notice"><span>Nous désirons utiliser des cookies tiers pour récolter des statistiques d'utilisation de ce site afin d'amiéliorer la qualité de ce dernier.<br/><br/>
+<div id="cookie-notice"><span>Nous désirons utiliser des cookies tiers pour récolter des statistiques d'utilisation de ce site afin d'en amiéliorer la qualité.<br/><br/>
 </span><a id="cookie-notice-accept" class="btn btn-primary btn-sm" href="#" >Approve</a><a href="/privacy" class="btn btn-primary btn-sm">More info</a></div>
 <script>
     function createCookie(name,value,days) {
