--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1,13 +1,15 @@
 <div class="product">
-  <a class="product__information" href="{{ product.url | relative_url }}">
-    <h2 class="product__title">{{ product.name }}</h2>
-    <img src="{{ product.image }}" alt="{{ product.name }} product image" class="product__image">
-    <p class="product__description">
-      {{ product.excerpt | strip_html }}
-      <br/>
-      <span class="read-more">En savoir plus...</span>
-    </p>
+  <div class="product__information">
+    <a class="" href="{{ product.url | relative_url }}">
+      <h2 class="product__title">{{ product.name }}</h2>
+      <img src="{{ product.image }}" alt="{{ product.name }} product image" class="product__image">
+      <p class="product__description">
+        {{ product.excerpt | strip_html }}
+        <br/>
+        <span class="read-more">En savoir plus...</span>
+      </p>
+    </a>
     {% include product-definition.html %}
-  </a>
+  </div>
   <img src="{{ product.image | relative_url }}" alt="{{ product.name }} product image" class="product__image">
 </div>
