link to out of stock

--- a/_includes/product-definition.html
+++ b/_includes/product-definition.html
@@ -1,10 +1,19 @@
-<button
-  class="buy-button snipcart-add-item"
-  data-item-id="{{ product.identifier }}"
-  data-item-name="{{ product.name }}"
-  data-item-price="{{ product.price }}"
-  data-item-image="{{ product.image | absolute_url }}"
-  data-item-url="{{ page.url | absolute_url }}"
-  data-item-description="{{ product.excerpt | strip_html }}">
-  Add to cart <strong>({{ product.price }}{{ site.currency }})</strong>
-</button>
+{% if(product.out_of_stock) %}
+  <a
+    href="/rupture_de_stock"
+    class="buy-button">
+    Add to cart <strong>({{ product.price }}{{ site.currency }})</strong>
+  </a>
+{% else %}
+  <button
+    class="buy-button snipcart-add-item"
+    data-item-id="{{ product.identifier }}"
+    data-item-name="{{ product.name }}"
+    data-item-price="{{ product.price }}"
+    data-item-image="{{ product.image | absolute_url }}"
+    data-item-url="{{ page.url | absolute_url }}"
+    data-item-description="{{ product.excerpt | strip_html }}">
+    Add to cart <strong>({{ product.price }}{{ site.currency }})</strong>
+  </button>
+{% endif %}
+
