--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1,6 +1,6 @@
 <div class="product">
   <div class="product__information">
-    <a class="" href="{{ product.url | relative_url }}">
+    <a href="{{ product.url | relative_url }}">
       <h2 class="product__title">{{ product.name }}</h2>
       <img src="{{ product.image }}" alt="{{ product.name }} product image" class="product__image">
       <p class="product__description">
